k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m324-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m324-app
  template:
    metadata:
      labels:
        app: m324-app
    spec:
      containers:
        - name: m324-app
          image: francesco448/m324-chat:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
