k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: m324-app-service
spec:
  selector:
    app: m324-app
  ports:
    - port: 80
      targetPort: 3000
