k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m324-app-ingress
spec:
  rules:
    - host: m324-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: m324-app-service
                port:
                  number: 80
